--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,12 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 # testing
 /coverage
 
