fixup! Update package.json scripts and improve media data table handling

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+   "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
+
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
     "@genkit-ai/google-genai": "^1.20.0",
